===V0.27==
 * fixed bug with overlapping metadata
 * Changed default of use.title.cachedonly=false
 * Added new parameter use.title.simpleonly=true  to only use pytivo/xml metadata for selectionscreen
 * Added folder support for push
 * new config option push.folders=true to turn on pushing into folders
 * Support multiple --config options on command line
 * Added support for loading streambaby.local.ini in additiojn to streambaby.ini
 * Default is disable pyTivo push (pytivo.ip=)
 * abstracted push interface
 * Added internal push based on moyekj's port of mind.py
 * new ini parameters for push: tivo.username, tivo.password, tivo.1=,tivo.1.tsn=,tivo.1.username=,tivo.1.password=,tivo.1.external=(true/false)
 * new ini external.url= Used for pushes to external tivos.  Should look like http://192.168.1.2:7290/streambaby/
 * Small optimization to mp4 code. Exponential speed increase in reinterleaving
 * added -Dxxxxx to force java to use ipv4
 * Pass-through 64bit co64 atoms
 * Add support for co64 atoms
 * Adjusted size of HD selection screen so CHANNEL_DOWN moves to last entry on current page (usual TiVo behavior)
 * Integrated Cahoon's MP4 splitting code
 * Added interleaving to java-based MP4 splitting code
 * Added itunes metadata support to Cahoon's mp4 parsing
 * Removed iso-parser MP4 parsing library from libs, and changed MP4 metadata code to use the new mp4 parsing code
 * New config option.  java.mp4slit (default=true) to use Cahoon's java based MP4splitter vs old C-port of mp4 splitter
 * Changed MP4 handling of avc1&avcC atom.  No longer assume avc1 is a container, but do assume avcC is located immediately after avc1 data
 * Added code to mp4 parsing to skip extra data in container atoms (so if remaining size < min atom size, just skip)
 * Changed hashing algorithm for cached previews (mostly so DVD VOB files don't conflict)  Should be backwards compatabile